--- a/config.json
+++ b/config.json
@@ -17,7 +17,8 @@
 	},
 	"bdsProject": false,
 	"packs": {
-		"behaviorPack": "./BP"
+		"behaviorPack": "./BP",
+		"resourcePack": "./RP"
 	},
 	"worlds": [
 		"./worlds/*"
