--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -6,8 +6,8 @@
 		]
 	},
 	"header": {
-		"name": "World Edit!",
-		"description": "A World Edit project, made for Minecraft Bedrock Edition.",
+		"name": "§l§7World Edit!§r §8- §bsyylaxx§r",
+		"description": "§l§7World Edit!§r §8- §bsyylaxx§r\n §l§8» §7Behaviour Pack!§r",
 		"min_engine_version": [
 			1,
 			20,
