New Degrees in Paste Feature
Added a new Feature that enables rotating Copied Structures.

--- a/RP/manifest.json
+++ b/RP/manifest.json
@@ -7,7 +7,7 @@
 	},
 	"header": {
 		"name": "§l§7World Edit!§r §8- §bsyylaxx§r",
-		"description": "§l§7World Edit!§r §8- §bsyylaxx§r\n §l§8» §7Resource Pack",
+		"description": "§l§7World Edit!§r §8- §bsyylaxx§r\n §l§8» §7Resource Pack!§r",
 		"min_engine_version": [
 			1,
 			20,
